--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru"> <head>
+<html lang="ru">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Donate iPAGroove</title>
@@ -13,8 +14,11 @@
             --box-shadow-color: rgba(0, 0, 0, 0.3); /* Цвет тени контейнера */
             --icon-hover-scale: 1.15; /* Увеличил масштаб при наведении */
             --icon-shadow-color: rgba(0, 0, 0, 0.4); /* Тень для иконок */
-            --scrollbar-thumb-color: rgba(163, 127, 255, 0.7); /* Цвет скроллбара */
-            --scrollbar-thumb-hover-color: rgba(255, 255, 255, 0.8); /* Цвет скроллбара при наведении */
+            
+            /* Новые переменные для стилей скроллбара */
+            --scrollbar-track-color: rgba(255, 255, 255, 0.05); /* Цвет фона дорожки скроллбара */
+            --scrollbar-thumb-color: rgba(163, 127, 255, 0.5); /* Полупрозрачный фиолетовый для ползунка */
+            --scrollbar-thumb-hover-color: rgba(163, 127, 255, 0.8); /* Более яркий фиолетовый при наведении */
         }
 
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
@@ -27,7 +31,6 @@
 
         body {
             height: 100vh;
-            /* Твой фон отличный! Оставляем его. */
             background: url('https://github.com/iPAGroove/igroove/blob/main/images/IMG_6677.jpeg?raw=true') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Poppins', sans-serif;
@@ -45,7 +48,6 @@
             width: 100%;
             text-align: center;
             backdrop-filter: blur(18px);
-            /* Улучшил тень, добавив легкое свечение */
             box-shadow: 0 8px 32px var(--box-shadow-color), 0 0 25px rgba(163, 127, 255, 0.3);
             border: 1px solid rgba(255, 255, 255, 0.1); /* Добавил легкую границу */
         }
@@ -76,18 +78,21 @@
 
             /* Красивая прокрутка для Firefox */
             scrollbar-width: thin;
-            scrollbar-color: var(--scrollbar-thumb-color) transparent;
+            scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color); /* Ползунок и дорожка */
+            scroll-behavior: smooth; /* Плавная прокрутка */
         }
 
         /* Красивая прокрутка для Webkit-браузеров (Chrome, Safari) */
         .icon-row::-webkit-scrollbar {
             height: 6px; /* Высота скроллбара */
-            background-color: transparent; /* Фон скроллбара */
+            background-color: var(--scrollbar-track-color); /* Фон дорожки скроллбара */
+            border-radius: 3px; /* Закругленные углы дорожки */
         }
 
         .icon-row::-webkit-scrollbar-thumb {
             background-color: var(--scrollbar-thumb-color); /* Цвет ползунка */
             border-radius: 3px; /* Закругленные углы ползунка */
+            transition: background-color 0.3s ease; /* Плавное изменение цвета */
         }
 
         .icon-row::-webkit-scrollbar-thumb:hover {
