--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
+            overflow: hidden; /* <-- ЭТО КЛЮЧЕВОЕ ИЗМЕНЕНИЕ: Убирает прокрутку для всего body */
         }
 
         .donate-container {
