--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         :root {
             --text-gradient-start: #ffffff;
             --text-gradient-middle: #a37fff;
-            --text-glow-shadow: rgba(163, 127, 255, 0.7); /* Цвет для тени текста */
+            --text-gradient-end: #6e00ff; /* Новый цвет для градиента */
+            --text-glow-shadow: rgba(163, 127, 255, 0.8); /* Цвет для тени текста, чуть ярче */
+            --text-glow-shadow-secondary: rgba(255, 255, 255, 0.3); /* Дополнительная тень */
+
             --container-bg: rgba(255, 255, 255, 0.08); /* Чуть ярче фон контейнера */
             --box-shadow-color: rgba(0, 0, 0, 0.3); /* Цвет тени контейнера */
             --icon-hover-scale: 1.15; /* Увеличил масштаб при наведении */
@@ -38,7 +41,7 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
-            overflow: hidden; /* <-- ЭТО КЛЮЧЕВОЕ ИЗМЕНЕНИЕ: Убирает прокрутку для всего body */
+            overflow: hidden; /* <-- Убирает прокрутку для всего body */
         }
 
         .donate-container {
@@ -54,19 +57,50 @@
         }
 
         h1 {
-            font-size: 28px;
-            background: linear-gradient(45deg, var(--text-gradient-start), var(--text-gradient-middle), var(--text-gradient-start)); /* Использование переменных */
+            font-family: 'Poppins', sans-serif; /* Убедимся, что Poppins используется для h1 */
+            font-size: 38px; /* Немного увеличим размер для выразительности */
+            font-weight: 700;
+            letter-spacing: 2px; /* Чуть больше расстояние между буквами */
+            margin-bottom: 35px; /* Увеличим отступ снизу */
+
+            /* Улучшенный градиент */
+            background: linear-gradient(90deg, var(--text-gradient-start), var(--text-gradient-middle), var(--text-gradient-end), var(--text-gradient-middle), var(--text-gradient-start));
+            background-size: 200% auto; /* Позволяет градиенту двигаться */
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: glow 3s ease-in-out infinite alternate;
-            font-weight: 700;
-            letter-spacing: 1px;
-            margin-bottom: 30px;
+            animation: 
+                textGradientFlow 8s linear infinite, /* Анимация движения градиента */
+                glow 3s ease-in-out infinite alternate; /* Анимация свечения */
+            
+            /* Добавим легкий 3D-эффект */
+            transform: perspective(500px) rotateX(7deg) translateY(-5px); /* Легкий наклон и поднятие */
+            text-shadow: 
+                0 0 8px var(--text-glow-shadow-secondary), /* Белая/прозрачная тень */
+                0 0 15px var(--text-glow-shadow), /* Основная фиолетовая тень */
+                0 0 25px var(--text-glow-shadow); /* Более сильное фиолетовое свечение */
+            transition: transform 0.3s ease; /* Плавный переход для трансформации */
         }
 
+        /* Анимация движения градиента текста */
+        @keyframes textGradientFlow {
+            0% { background-position: 0% 50%; }
+            100% { background-position: 200% 50%; }
+        }
+
+        /* Анимация свечения текста */
         @keyframes glow {
-            0% { text-shadow: 0 0 4px #ffffff55, 0 0 10px var(--text-glow-shadow); }
-            100% { text-shadow: 0 0 10px #ffffffaa, 0 0 18px var(--text-glow-shadow); }
+            0% { 
+                text-shadow: 
+                    0 0 6px var(--text-glow-shadow-secondary),
+                    0 0 12px var(--text-glow-shadow),
+                    0 0 20px var(--text-glow-shadow);
+            }
+            100% { 
+                text-shadow: 
+                    0 0 10px var(--text-glow-shadow-secondary),
+                    0 0 20px var(--text-glow-shadow),
+                    0 0 35px var(--text-glow-shadow);
+            }
         }
 
         .icon-row {
@@ -141,8 +175,9 @@
             }
 
             h1 {
-                font-size: 22px;
-                margin-bottom: 20px;
+                font-size: 28px; /* Уменьшим размер h1 на мобильных, но оставим больше, чем было */
+                margin-bottom: 25px; /* Адаптивный отступ */
+                transform: perspective(300px) rotateX(5deg) translateY(-3px); /* Меньший 3D-эффект на мобильных */
             }
 
             .icon-img {
@@ -166,7 +201,8 @@
 
         @media (max-width: 320px) { /* Для очень маленьких экранов */
             h1 {
-                font-size: 18px;
+                font-size: 22px; /* Еще меньше для совсем маленьких экранов */
+                margin-bottom: 20px;
             }
             .icon-img {
                 width: 45px;
