--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </a>
 
             <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-item" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
+                <img src="https://com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
                 <span class="icon-label">Монобанк</span>
             </a>
 
