--- a/index.html
+++ b/index.html
@@ -1,505 +1,47 @@
 <!DOCTYPE html>
-
 <html lang="ru">
-
 <head>
-
-    <meta charset="UTF-8" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <title>Donate iPAGroove</title>
-
-    <style>
-
-        /* Добавил CSS переменные для удобства */
-
-        :root {
-
-            /* Обновленные переменные для текста - теперь голубовато-синие */
-
-            --text-color: #ffffff; /* Основной белый цвет для четкости */
-
-            --text-glow-color-light: rgba(255, 255, 255, 0.5); /* Легкое белое свечение */
-
-            --text-glow-color-accent: rgba(135, 206, 250, 0.8); /* Светло-голубой акцент */
-
-            --text-gradient-start: #ffffff; /* Начало градиента: белый */
-
-            --text-gradient-middle: #ADD8E6; /* Середина градиента: Светло-голубой */
-
-            --text-gradient-end: #87CEEB; /* Конец градиента: Голубой */
-
-
-
-
-
-            --container-bg: rgba(255, 255, 255, 0.08);
-
-            --box-shadow-color: rgba(0, 0, 0, 0.3);
-
-            --icon-hover-scale: 1.15;
-
-            --icon-shadow-color: rgba(0, 0, 0, 0.4);
-
-            
-
-            /* Скроллбар тоже сделаем в тон, голубоватым */
-
-            --scrollbar-track-color: rgba(255, 255, 255, 0.05);
-
-            --scrollbar-thumb-color: rgba(135, 206, 250, 0.6); /* Полупрозрачный светло-голубой для ползунка */
-
-            --scrollbar-thumb-hover-color: rgba(135, 206, 250, 0.9); /* Более яркий светло-голубой при наведении */
-
-        }
-
-
-
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
-
-
-
-        * {
-
-            margin: 0;
-
-            padding: 0;
-
-            box-sizing: border-box;
-
-        }
-
-
-
-        body {
-
-            height: 100vh;
-
-            background: url('https://github.com/iPAGroove/igroove/blob/main/images/IMG_6677.jpeg?raw=true') no-repeat center center fixed;
-
-            background-size: cover;
-
-            font-family: 'Poppins', sans-serif;
-
-            display: flex;
-
-            justify-content: center;
-
-            align-items: center;
-
-            padding: 20px;
-
-            overflow: hidden;
-
-        }
-
-
-
-        .donate-container {
-
-            background: var(--container-bg);
-
-            border-radius: 24px;
-
-            padding: 30px;
-
-            max-width: 600px;
-
-            width: 100%;
-
-            text-align: center;
-
-            backdrop-filter: blur(18px);
-
-            /* Тень контейнера тоже можно слегка подкрасить в голубой, если хочется */
-
-            box-shadow: 0 8px 32px var(--box-shadow-color), 0 0 25px rgba(135, 206, 250, 0.3); /* Голубая тень для контейнера */
-
-            border: 1px solid rgba(255, 255, 255, 0.1);
-
-        }
-
-
-
-        h1 {
-
-            font-family: 'Poppins', sans-serif;
-
-            font-size: 32px;
-
-            font-weight: 700;
-
-            letter-spacing: 1px;
-
-            margin-bottom: 25px;
-
-
-
-            color: var(--text-color); /* Основной белый цвет для четкости */
-
-            
-
-            /* Упрощенный, более четкий голубоватый градиент */
-
-            background: linear-gradient(90deg, var(--text-gradient-start), var(--text-gradient-middle), var(--text-gradient-end), var(--text-gradient-middle), var(--text-gradient-start));
-
-            -webkit-background-clip: text;
-
-            -webkit-text-fill-color: transparent;
-
-            background-size: 200% auto;
-
-            animation: textGradientFlow 6s linear infinite;
-
-
-
-            /* Голубовато-синяя тень */
-
-            text-shadow: 
-
-                0 0 5px var(--text-glow-color-light), /* Легкое белое свечение */
-
-                0 0 10px var(--text-glow-color-accent), /* Акцентное голубое свечение */
-
-                0 0 15px var(--text-glow-color-accent); /* Чуть более сильное акцентное свечение */
-
-        }
-
-
-
-        /* Анимация движения градиента текста */
-
-        @keyframes textGradientFlow {
-
-            0% { background-position: 0% 50%; }
-
-            100% { background-position: 200% 50%; }
-
-        }
-
-
-
-        /* Анимация свечения текста - можно удалить, если не используется напрямую */
-
-        @keyframes glow {
-
-            0% { 
-
-                text-shadow: 
-
-                    0 0 5px var(--text-glow-color-light),
-
-                    0 0 10px var(--text-glow-color-accent),
-
-                    0 0 15px var(--text-glow-color-accent);
-
-            }
-
-            100% { 
-
-                text-shadow: 
-
-                    0 0 8px var(--text-glow-color-light),
-
-                    0 0 15px var(--text-glow-color-accent),
-
-                    0 0 25px var(--text-glow-color-accent);
-
-            }
-
-        }
-
-
-
-        .icon-row {
-
-            display: flex;
-
-            overflow-x: auto;
-
-            gap: 24px;
-
-            justify-content: center;
-
-            align-items: center;
-
-            padding-bottom: 10px;
-
-
-
-            scrollbar-width: thin;
-
-            scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
-
-            scroll-behavior: smooth;
-
-        }
-
-
-
-        .icon-row::-webkit-scrollbar {
-
-            height: 6px;
-
-            background-color: var(--scrollbar-track-color);
-
-            border-radius: 3px;
-
-        }
-
-
-
-        .icon-row::-webkit-scrollbar-thumb {
-
-            background-color: var(--scrollbar-thumb-color);
-
-            border-radius: 3px;
-
-            transition: background-color 0.3s ease;
-
-        }
-
-
-
-        .icon-row::-webkit-scrollbar-thumb:hover {
-
-            background-color: var(--scrollbar-thumb-hover-color);
-
-        }
-
-
-
-        .icon-item {
-
-            flex: 0 0 auto;
-
-            display: flex;
-
-            flex-direction: column;
-
-            align-items: center;
-
-            text-decoration: none;
-
-            color: white;
-
-            transition: transform 0.3s ease;
-
-        }
-
-
-
-        .icon-item:hover {
-
-            transform: scale(var(--icon-hover-scale));
-
-        }
-
-
-
-        .icon-img {
-
-            width: 60px;
-
-            height: 60px;
-
-            object-fit: contain;
-
-            border-radius: 14px;
-
-            margin-bottom: 8px;
-
-            box-shadow: 0 4px 10px var(--icon-shadow-color);
-
-            background: rgba(255, 255, 255, 0.1);
-
-        }
-
-
-
-        .icon-label {
-
-            font-size: 13px;
-
-            text-align: center;
-
-            max-width: 80px;
-
-            white-space: nowrap;
-
-            overflow: hidden;
-
-            text-overflow: ellipsis;
-
-        }
-
-
-
-        /* Медиа-запросы для адаптации */
-
-        @media (max-width: 480px) {
-
-            .donate-container {
-
-                padding: 20px;
-
-                border-radius: 18px;
-
-            }
-
-
-
-            h1 {
-
-                font-size: 26px;
-
-                margin-bottom: 20px;
-
-            }
-
-
-
-            .icon-img {
-
-                width: 50px;
-
-                height: 50px;
-
-            }
-
-
-
-            .icon-label {
-
-                font-size: 12px;
-
-                max-width: 60px;
-
-            }
-
-
-
-            .icon-row {
-
-                gap: 16px;
-
-                padding-bottom: 8px;
-
-            }
-
-            .icon-row::-webkit-scrollbar {
-
-                height: 4px;
-
-            }
-
-        }
-
-
-
-        @media (max-width: 320px) {
-
-            h1 {
-
-                font-size: 20px;
-
-                margin-bottom: 18px;
-
-            }
-
-            .icon-img {
-
-                width: 45px;
-
-                height: 45px;
-
-            }
-
-            .icon-label {
-
-                font-size: 11px;
-
-                max-width: 55px;
-
-            }
-
-        }
-
-    </style>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Donate iPAGroove</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
+    <div class="donate-container">
+        <h1>Donate iPAGroove</h1>
+        <div class="icon-row">
+            <a href="ВАША_ССЫЛКА_НА_ПРИВАТ" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
+                <span class="icon-label">ПриватБанк</span>
+            </a>
 
-    <div class="donate-container">
+            <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
+                <span class="icon-label">Монобанк</span>
+            </a>
 
-        <h1>Donate iPAGroove</h1>
+            <a href="ВАША_ССЫЛКА_НА_PAYPAL" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
+                <span class="icon-label">PayPal</span>
+            </a>
 
-        <div class="icon-row">
+            <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
+                <span class="icon-label">Binance</span>
+            </a>
 
-            <a href="ВАША_ССЫЛКА_НА_ПРИВАТ" class="icon-item" target="_blank">
+            <a href="ВАША_ССЫЛКА_НА_ABANK" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
+                <span class="icon-label">ABank</span>
+            </a>
 
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
-
-                <span class="icon-label">ПриватБанк</span>
-
-            </a>
-
-
-
-            <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-item" target="_blank">
-
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
-
-                <span class="icon-label">Монобанк</span>
-
-            </a>
-
-
-
-            <a href="ВАША_ССЫЛКА_НА_PAYPAL" class="icon-item" target="_blank">
-
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
-
-                <span class="icon-label">PayPal</span>
-
-            </a>
-
-
-
-            <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-item" target="_blank">
-
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
-
-                <span class="icon-label">Binance</span>
-
-            </a>
-
-
-
-            <a href="ВАША_ССЫЛКА_НА_ABANK" class="icon-item" target="_blank">
-
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
-
-                <span class="icon-label">ABank</span>
-
-            </a>
-
-
-
-            <a href="ВАША_ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-item" target="_blank">
-
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
-
-                <span class="icon-label">Telegram</span>
-
-            </a>
-
-        </div>
-
-    </div>
-
+            <a href="ВАША_ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-item" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
+                <span class="icon-label">Telegram</span>
+            </a>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
