--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
             </a>
         </div>
     </div>
+
+    <div class="language-switcher" id="language-switcher">
+        <div class="current-lang" id="current-lang">RU</div>
+        <div class="lang-options" id="lang-options">
+            <span data-lang="en">EN</span>
+            <span data-lang="ru">RU</span>
+            <span data-lang="ua">UA</span>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
