--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,27 +15,22 @@
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
                 <span class="icon-label">ПриватБанк</span>
             </a>
-
             <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-item" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
                 <span class="icon-label">Монобанк</span>
             </a>
-
             <a href="ВАША_ССЫЛКА_НА_PAYPAL" class="icon-item" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
                 <span class="icon-label">PayPal</span>
             </a>
-
             <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-item" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
                 <span class="icon-label">Binance</span>
             </a>
-
             <a href="ВАША_ССЫЛКА_НА_ABANK" class="icon-item" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
                 <span class="icon-label">ABank</span>
             </a>
-
             <a href="ВАША_ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-item" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
                 <span class="icon-label">Telegram</span>
@@ -44,12 +39,9 @@
     </div>
 
     <div class="language-switcher" id="language-switcher">
-        <div class="current-lang" id="current-lang">RU</div>
-        <div class="lang-options" id="lang-options">
-            <span data-lang="en">EN</span>
-            <span data-lang="ru">RU</span>
-            <span data-lang="ua">UA</span>
-        </div>
+        <div class="lang-option active" data-lang="en">EN</div>
+        <div class="lang-option" data-lang="ru">RU</div>
+        <div class="lang-option" data-lang="ua">UA</div>
     </div>
 
     <script src="script.js"></script>
