--- a/index.html
+++ b/index.html
@@ -23,9 +23,22 @@
         <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
         <span class="icon-label">PayPal</span>
       </a>
+      <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-item" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
+        <span class="icon-label">Binance</span>
+      </a>
+      <a href="ВАША_ССЫЛКА_НА_ABANK" class="icon-item" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
+        <span class="icon-label">ABank</span>
+      </a>
+      <a href="ВАША_ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-item" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
+        <span class="icon-label">Telegram</span>
+      </a>
     </div>
   </div>
 
+  <!-- Языковой переключатель -->
   <div class="language-switcher" id="language-switcher">
     <div class="lang-option" data-lang="ua">UA</div>
     <div class="lang-option active" data-lang="en">EN</div>
