--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
   </div>
 
   <div class="language-switcher" id="language-switcher">
-    <div class="lang-option active" data-lang="en">EN</div>
-    <div class="lang-option" data-lang="ru">RU</div>
-    <div class="lang-option" data-lang="ua">UA</div>
+    <span id="current-lang-display" data-lang="en">EN</span>
   </div>
 
   <script src="script.js"></script>
