--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
   <div class="language-switcher" id="language-switcher">
     <span id="current-lang-display" data-lang="en">EN</span>
+    <div class="lang-options-expanded" id="lang-options-expanded">
+        <span class="lang-option-item" data-lang="ua">UA</span>
+        <span class="lang-option-item" data-lang="en">EN</span>
+        <span class="lang-option-item" data-lang="ru">RU</span>
+    </div>
   </div>
 
   <script src="script.js"></script>
