--- a/index.html
+++ b/index.html
@@ -47,72 +47,50 @@
   <div class="modal" id="privatbank-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>ПриватБанк</h2>
-      <p>Информация о ПриватБанке:</p>
-      <p>Номер карты: <b>XXXX XXXX XXXX XXXX</b></p>
-      <p>ФИО: <b>Иван Петров</b></p>
-      <p>Назначение платежа: <b>Донат</b></p>
-      <button class="copy-button" data-copy-text="XXXX XXXX XXXX XXXX">Копировать номер карты</button>
-      <p class="modal-note">Пожалуйста, используйте эти реквизиты для перевода.</p>
-    </div>
+      <h2></h2> <p class="modal-note"></p> <button class="copy-button"></button> </div>
   </div>
 
   <div class="modal" id="monobank-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>Монобанк</h2>
-      <p>Информация о Монобанке:</p>
-      <p>Номер карты: <b>YYYY YYYY YYYY YYYY</b></p>
-      <p>ФИО: <b>Мария Иванова</b></p>
-      <p>Назначение платежа: <b>Поддержка</b></p>
-      <button class="copy-button" data-copy-text="YYYY YYYY YYYY YYYY">Копировать номер карты</button>
-      <p class="modal-note">Ваша поддержка очень важна для нас!</p>
+      <h2></h2>
+      <p class="modal-note"></p>
+      <button class="copy-button"></button>
     </div>
   </div>
 
   <div class="modal" id="paypal-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>PayPal</h2>
-      <p>Для доната через PayPal:</p>
-      <p>Email: <b>your_paypal_email@example.com</b></p>
-      <a href="https://www.paypal.me/yourusername" target="_blank" class="modal-link">Перейти на страницу PayPal.Me</a>
-      <p class="modal-note">Убедитесь, что вы отправляете средства как "Другу или семье", чтобы избежать комиссий.</p>
-    </div>
+      <h2></h2>
+      <p class="modal-note"></p>
+      </div>
   </div>
 
   <div class="modal" id="binance-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>Binance</h2>
-      <p>Для доната через Binance (USDT TRC20):</p>
-      <p>Адрес кошелька: <b>TZ1abcdEFGHijklMNOPqrstUVWXYZ123456789</b></p>
-      <button class="copy-button" data-copy-text="TZ1abcdEFGHijklMNOPqrstUVWXYZ123456789">Копировать адрес кошелька</button>
-      <p class="modal-note">Пожалуйста, отправляйте только USDT в сети TRC20.</p>
+      <h2></h2>
+      <p class="modal-note"></p>
+      <button class="copy-button"></button>
     </div>
   </div>
 
   <div class="modal" id="abank-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>ABank</h2>
-      <p>Информация об ABank:</p>
-      <p>Номер карты: <b>AAAA AAAA AAAA AAAA</b></p>
-      <p>ФИО: <b>Алексей Кузнецов</b></p>
-      <button class="copy-button" data-copy-text="AAAA AAAA AAAA AAAA">Копировать номер карты</button>
-      <p class="modal-note">Спасибо за ваш вклад!</p>
+      <h2></h2>
+      <p class="modal-note"></p>
+      <button class="copy-button"></button>
     </div>
   </div>
 
   <div class="modal" id="telegram-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>Telegram Wallet</h2>
-      <p>Для доната через Telegram Wallet:</p>
-      <p>Наш ник в Telegram: <b>@your_telegram_username</b></p>
-      <a href="https://t.me/your_telegram_username" target="_blank" class="modal-link">Перейти в Telegram чат</a>
-      <p class="modal-note">Вы можете отправить TON или другую криптовалюту через Telegram Wallet.</p>
-    </div>
+      <h2></h2>
+      <p class="modal-note"></p>
+      </div>
   </div>
 
   <div id="modal-overlay"></div>
