--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donate iPAGroove</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="modal.css" /> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="modal.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="donate-container">
@@ -47,7 +48,10 @@
   <div class="modal" id="privatbank-modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2></h2> <p class="modal-note"></p> <button class="copy-button"></button> </div>
+      <h2></h2>
+      <p class="modal-note"></p>
+      <button class="modal-button"></button>
+    </div>
   </div>
 
   <div class="modal" id="monobank-modal">
@@ -55,7 +59,7 @@
       <span class="close-button">&times;</span>
       <h2></h2>
       <p class="modal-note"></p>
-      <button class="copy-button"></button>
+      <button class="modal-button"></button>
     </div>
   </div>
 
@@ -64,7 +68,7 @@
       <span class="close-button">&times;</span>
       <h2></h2>
       <p class="modal-note"></p>
-      </div>
+    </div>
   </div>
 
   <div class="modal" id="binance-modal">
@@ -72,7 +76,7 @@
       <span class="close-button">&times;</span>
       <h2></h2>
       <p class="modal-note"></p>
-      <button class="copy-button"></button>
+      <button class="modal-button"></button>
     </div>
   </div>
 
@@ -81,7 +85,7 @@
       <span class="close-button">&times;</span>
       <h2></h2>
       <p class="modal-note"></p>
-      <button class="copy-button"></button>
+      <button class="modal-button"></button>
     </div>
   </div>
 
@@ -90,11 +94,12 @@
       <span class="close-button">&times;</span>
       <h2></h2>
       <p class="modal-note"></p>
-      </div>
+    </div>
   </div>
 
   <div id="modal-overlay"></div>
 
   <script src="script.js"></script>
-  <script src="modal.js"></script> </body>
+  <script src="modal.js"></script>
+</body>
 </html>
