--- a/index.html
+++ b/index.html
@@ -9,59 +9,106 @@
 <body>
 
 <header>
-  <h1>📘 Полный гид по сертификатам iOS</h1>
-  <p>Пошаговая инструкция: покупка, установка установщиков, импорт сертификата и установка iPA</p>
+  <h1>📘 Полный гид по сертификатам и установке iPA</h1>
+  <p>Все ответы на вопросы новичков: от покупки сертификата до установки приложений</p>
 </header>
 
 <main>
 
   <!-- FAQ -->
   <section class="faq">
-    <h2>❓ FAQ</h2>
+    <h2>❓ Часто задаваемые вопросы (FAQ)</h2>
     <div class="accordion">
+
       <button class="accordion-btn">Что такое сертификат?</button>
       <div class="accordion-content">
-        <p>Сертификат — это цифровой ключ, который регистрирует твой UDID в режиме разработчика у Apple. 
+        <p>Сертификат — это цифровой ключ, который регистрирует твой UDID в режиме разработчика у Apple.
         Благодаря этому можно устанавливать любые сторонние iPA файлы на iPhone/iPad.</p>
       </div>
 
-      <button class="accordion-btn">Где узнать UDID?</button>
+      <button class="accordion-btn">Где найти свой UDID?</button>
       <div class="accordion-content">
-        <p>На сайте <a href="https://udid.tech" target="_blank">udid.tech</a>. Там же есть видео инструкция.</p>
+        <p>На сайте <a href="https://udid.tech" target="_blank">udid.tech</a>. Там же есть видео-инструкция.</p>
       </div>
 
-      <button class="accordion-btn">Какие бывают сертификаты?</button>
+      <button class="accordion-btn">Какие бывают виды сертификатов?</button>
       <div class="accordion-content">
-        <p><b>Обычный:</b> регистрация до 72 часов, без гарантии, риск чёрного списка.<br>
-        <b>Супер-моментальный:</b> мгновенная регистрация, обходит blacklist, гарантия 6 мес.</p>
+        <p><b>Обычный сертификат:</b> регистрация до 72 часов, без гарантии, есть риск чёрного списка.<br>
+        <b>Супер-моментальный сертификат:</b> регистрация мгновенная, обходит blacklist, гарантия 6 мес.</p>
       </div>
 
-      <button class="accordion-btn">Сколько живёт сертификат?</button>
+      <button class="accordion-btn">На сколько действует сертификат?</button>
       <div class="accordion-content">
-        <p>До 1 года. Гарантия на работу — 6 месяцев.</p>
+        <p>Срок действия до 1 года. Гарантия — 6 месяцев.</p>
       </div>
 
       <button class="accordion-btn">Сколько приложений можно установить?</button>
       <div class="accordion-content">
-        <p>Неограниченно. Сертификат общий для всех iPA.</p>
+        <p>Количество не ограничено. Один сертификат работает для всех приложений.</p>
       </div>
+
+      <button class="accordion-btn">Можно ли попасть в чёрный список?</button>
+      <div class="accordion-content">
+        <p>Да, при обычном сертификате есть малая вероятность, что UDID попадёт в blacklist Apple.
+        В таком случае установка невозможна до снятия блокировки.</p>
+      </div>
+
+      <button class="accordion-btn">Что делать, если UDID в чёрном списке?</button>
+      <div class="accordion-content">
+        <p>Есть два варианта:<br>
+        1. Ждать 1–180 дней, пока Apple снимет блокировку.<br>
+        2. Купить супер-моментальный сертификат (обходит blacklist).</p>
+      </div>
+
+      <button class="accordion-btn">Сертификат привязан к Apple ID?</button>
+      <div class="accordion-content">
+        <p>Нет. Привязка только к UDID устройства.</p>
+      </div>
+
+      <button class="accordion-btn">Сертификат работает на всех iOS?</button>
+      <div class="accordion-content">
+        <p>Да, подходит для любых версий iOS.</p>
+      </div>
+
+      <button class="accordion-btn">Можно ли делиться сертификатом?</button>
+      <div class="accordion-content">
+        <p>Нет. Каждый сертификат работает только на 1 UDID (одно устройство).</p>
+      </div>
+
+      <button class="accordion-btn">Что будет, если поменять телефон?</button>
+      <div class="accordion-content">
+        <p>Нужно покупать новый сертификат, так как у нового устройства другой UDID.</p>
+      </div>
+
+      <button class="accordion-btn">Могут ли заблокировать мой Apple ID?</button>
+      <div class="accordion-content">
+        <p>Нет. Apple блокирует только UDID устройства, Apple ID в безопасности.</p>
+      </div>
+
+      <button class="accordion-btn">Можно ли самому сделать сертификат?</button>
+      <div class="accordion-content">
+        <p>Да, но только если у тебя есть учётка разработчика Apple (99$/год).
+        Для обычного пользователя это сложно и невыгодно.</p>
+      </div>
+
     </div>
   </section>
 
   <!-- Покупка -->
   <section>
-    <h2>🛒 Как купить сертификат?</h2>
+    <h2>🛒 Как купить сертификат</h2>
     <ol>
-      <li>Выбери тип сертификата: обычный или супер-моментальный.</li>
-      <li>Оплати (Visa, PayPal, Binance, USDT, Apple Gift Card).</li>
-      <li>Отправь свой UDID.</li>
-      <li>Жди подтверждения регистрации.</li>
+      <li>Выбери тип сертификата (обычный или супер-моментальный).</li>
+      <li>Оплати удобным способом: Visa/MasterCard, PayPal, Binance, USDT, Apple Gift Card.</li>
+      <li>Отправь свой UDID (через сайт udid.tech).</li>
+      <li>Жди подтверждения, что UDID зарегистрирован.</li>
     </ol>
   </section>
 
   <!-- Установщики -->
   <section>
     <h2>📲 Установщики приложений</h2>
+    <p>Для установки iPA нужны специальные программы:</p>
     <div class="installers">
       <a href="https://esign.yyy" target="_blank" class="btn">⬇️ ESign</a>
       <a href="https://usescarlet.com" target="_blank" class="btn">⬇️ Scarlet</a>
@@ -72,7 +119,7 @@
 
   <!-- Импорт сертификата -->
   <section>
-    <h2>🗝 Импорт сертификата (.p12 + .mobileprovision)</h2>
+    <h2>🗝 Как импортировать сертификат (.p12 + .mobileprovision)</h2>
     <ul>
       <li><b>ESign:</b> Certificate Manager → Import → выбрать файлы.</li>
       <li><b>Scarlet:</b> Certificates → Import → Apply.</li>
@@ -83,22 +130,22 @@
 
   <!-- Установка iPA -->
   <section>
-    <h2>📥 Установка iPA</h2>
-    <p>Процесс почти одинаковый во всех установщиках:</p>
+    <h2>📥 Установка iPA файлов</h2>
+    <p>Процесс одинаковый:</p>
     <ol>
       <li>Импортируй iPA файл в приложение.</li>
       <li>Нажми «Sign & Install».</li>
-      <li>Жди пока иконка появится на рабочем столе.</li>
+      <li>Жди, пока иконка появится на рабочем столе.</li>
     </ol>
   </section>
 
   <!-- Где искать IPA -->
   <section>
-    <h2>🔍 Где искать iPA?</h2>
+    <h2>🔍 Где искать iPA файлы</h2>
     <ul>
-      <li>📂 Наш репозиторий (ссылка вставляется здесь)</li>
-      <li>📱 Telegram-каналы (например, iPA Groove)</li>
-      <li>🌐 Сайты: iosninja, appdb и т.д.</li>
+      <li>📂 Наш репозиторий (сюда вставляется твоя ссылка с GitHub/S3).</li>
+      <li>📱 Telegram-каналы (например, iPA Groove).</li>
+      <li>🌐 Сайты: iosninja, appdb и другие.</li>
     </ul>
   </section>
 
